# ashpool

./: LICENSE  README.md  instrucciones.txt
blog/: 20150618.asciidoc  20150707.asciidoc  20150715.txt
cmake/: FindFreeImage.cmake
src/: CMakeLists.txt  bbox.hpp  bvh.cpp  bvh.hpp  bvhlinearnode.hpp  bvhprimitiveinfo.hpp  camera.cpp  camera.h  camera.hpp  check  cl_device.cpp  cl_device.hpp  cl_init.cpp  cl_init.hpp  cl_platform.cpp  cl_platform.hpp  clkernelmanager.cpp  clkernelmanager.hpp  config.hpp  configloader.cpp  configloader.hpp  deferredshader.cpp  deferredshader.hpp  files.txt  hybridshader.cpp  hybridshader.hpp  hybridshadercpu.cpp  hybridshadercpu.hpp  input.cpp  input.hpp  main.cpp  material.hpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp  modelloader.cpp  modelloader.hpp  (+31 more)
src/kernels/: render.cl
src/shaders/: gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  render.cl  shader.frag  shader.vert
